@@ -5,6 +5,10 @@
 // $Id$
 //
 // $Log$
+// Revision 1.12  2008/02/19 11:49:18  ivan
+// - Move setting of CPU priority after spwaning timer thread
+// - Added support for Posix 1003.1e capabilities
+//
 // Revision 1.11  2006/12/28 03:04:34  fish
 // Permanently disable in bootstrap.c Microsoft's completely INSANE Invalid CRT Parameter handling behavior
 //
@@ -82,6 +86,9 @@ static void ProcessException( EXCEPTION_POINTERS* pExceptionPtrs );
 
 ///////////////////////////////////////////////////////////////////////////////
 
+#include <Mmsystem.h>
+#pragma comment( lib, "Winmm" )
+
 int main(int ac,char *av[])
 {
     int rc = 0;
@@ -91,6 +98,10 @@ int main(int ac,char *av[])
     // Disable Microsoft's INSANE invalid crt parameter handling!
 
     DISABLE_CRT_INVALID_PARAMETER_HANDLER();
+
+    // Request the highest possible time-interval accuracy...
+
+    timeBeginPeriod( 1 );   // (one millisecond time interval accuracy)
 
     // If we're being debugged, then let the debugger
     // catch the exception. Otherwise, let our exception
@@ -142,6 +153,10 @@ int main(int ac,char *av[])
             rc = -1; // (indicate error)
         }
     }
+
+    // Each call to "timeBeginPeriod" must be matched with a call to "timeEndPeriod"
+
+    timeEndPeriod( 1 );     // (no longer care about accurate time intervals)
 
     return rc;
 }
